src/test/deca/context/invalid/fields/protected_field_access_outside.deca
// Description :
//    Accès à un champ protected depuis une classe non sous-classe.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 14 : La classe actuelle B n'a pas accès au champ protégé de A

class A {
protected int x;
}

class B {
    int f(A a) {
        return a.x;
    }
}

{
}

